# guidance-for-aws-deepracer-event-management

./: .dockerignore  .editorconfig  .eslintrc.js  .eslintrc.json  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.leaderboard  Dockerfile.overlay  Dockerfile.website  Makefile  Makefile_jmadhuki_bkp  README.md  app.py  build.config  build.config.example  cdk.json  cleanup_hybrid_activations.py  compose.yaml  compose_test.yaml  generate_amplify_config.py  generate_amplify_config_cfn.py  jest.config.js  jest.config.ts  package.json  pre-commit-eslint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tsconfig.json  update_index_html_with_script_tag.py  update_index_html_with_script_tag_cfn.py
backend/: UserPoolUser.py  car_activation.py  cars_manager.py  cwrum_construct.py  deepracer_event_manager_fe_deploy_stack.py  deepracer_event_manager_pipeline_stack.py  deepracer_event_manager_stack.py  default_admin_user_construct.py  events_manager.py  fleets_manager.py  label_printer.py  models_manager.py  user_pool_user.py
deepracer_event_manager/: cwrum_construct.py  deepracer_event_manager_fe_deploy_stack.py  deepracer_event_manager_pipeline_stack.py  deepracer_event_manager_stack.py
docs/: DOCS.md  DREM-architecture.xml  DREM-aws-reference-architecture.pptx  README.md  SES.md  doc-adding-help-panel-copy.md  docs-operator-car-management.md  docs-operator-event-management.md  screenshots.afphoto  testing-ssm-cross-stack-migration-pr2.md  testing-ssm-cross-stack-migration.md  testing-strategy.md
infrastructure/: deepracer_event_manager_stack.py
leaderboard-timer/: README.md  package.json  run_timer.sh  service-setup.sh  timer.js
lib/: base-stack.ts  (+3 more)
(+1029 files in other folders)
